@@ -73,102 +73,102 @@
 (let ((a (acons 'a 'b (acons 'c 'd (acons 'e 'f ()))))
       (b (acons "this" "is" (acons "a" "test" ())))
       (deformed '(a b c d e f g)))
-  (pass-if "alist: acons"
+  (pass-if "acons"
 	   (and (equal? a '((a . b) (c . d) (e . f)))
 		(equal? b '(("this" . "is") ("a" . "test")))))
-  (pass-if "alist: sloppy-assq"
+  (pass-if "sloppy-assq"
 	   (let ((x (sloppy-assq 'c a)))
 	     (and (pair? x)
 		  (eq? (car x) 'c)
 		  (eq? (cdr x) 'd))))
-  (pass-if "alist: sloppy-assq not"
+  (pass-if "sloppy-assq not"
 	   (let ((x (sloppy-assq "this" b)))
 	     (not x)))
-  (pass-if "alist: sloppy-assv"
+  (pass-if "sloppy-assv"
 	   (let ((x (sloppy-assv 'c a)))
 	     (and (pair? x)
 		  (eq? (car x) 'c)
 		  (eq? (cdr x) 'd))))
-  (pass-if "alist: sloppy-assv not"
+  (pass-if "sloppy-assv not"
 	   (let ((x (sloppy-assv "this" b)))
 	     (not x)))
-  (pass-if "alist: sloppy-assoc"
+  (pass-if "sloppy-assoc"
 	   (let ((x (sloppy-assoc "this" b)))
 	     (and (pair? x)
 		  (string=? (cdr x) "is"))))
-  (pass-if "alist: sloppy-assoc not"
+  (pass-if "sloppy-assoc not"
 	   (let ((x (sloppy-assoc "heehee" b)))
 	     (not x)))
-  (pass-if "alist: assq"
+  (pass-if "assq"
 	   (let ((x (assq 'c a)))
 	     (and (pair? x)
 		  (eq? (car x) 'c)
 		  (eq? (cdr x) 'd))))
-  (pass-if "alist: assq deformed"
+  (pass-if "assq deformed"
 	   (catch 'wrong-type-arg
 		  (lambda ()
 		    (assq 'x deformed))
 		  (lambda (key . args)
 		    #t)))
-  (pass-if-not "alist: assq not" (assq 'r a))
-  (pass-if "alist: assv"
+  (pass-if-not "assq not" (assq 'r a))
+  (pass-if "assv"
 	   (let ((x (assv 'a a)))
 	     (and (pair? x)
 		  (eq? (car x) 'a)
 		  (eq? (cdr x) 'b))))
-  (pass-if "alist: assv deformed"
+  (pass-if "assv deformed"
 	   (catch 'wrong-type-arg
 		  (lambda ()
 		    (assv 'x deformed)
 		    #f)
 		  (lambda (key . args)
 		    #t)))
-  (pass-if-not "alist: assv not" (assq "this" b))
+  (pass-if-not "assv not" (assq "this" b))
 
-  (pass-if "alist: assoc"
+  (pass-if "assoc"
 	   (let ((x (assoc "this" b)))
 	     (and (pair? x)
 		  (string=? (car x) "this")
 		  (string=? (cdr x) "is"))))
-  (pass-if "alist: assoc deformed"
+  (pass-if "assoc deformed"
 	   (catch 'wrong-type-arg
 		  (lambda ()
 		    (assoc 'x deformed)
 		    #f)
 		  (lambda (key . args)
 		    #t)))
-  (pass-if-not "alist: assoc not" (assoc "this isn't" b)))
+  (pass-if-not "assoc not" (assoc "this isn't" b)))
 
 
 ;;; Refers
 (let ((a '((foo bar) (baz quux)))
       (b '(("one" 2 3) ("four" 5 6) ("seven" 8 9)))
       (deformed '(thats a real sloppy assq you got there)))
-  (pass-if "alist: assq-ref"
+  (pass-if "assq-ref"
 	   (let ((x (assq-ref a 'foo)))
 	     (and (list? x)
 		  (eq? (car x) 'bar))))
 
-  (pass-if-not "alist: assq-ref not" (assq-ref b "one"))
-  (pass-if "alist: assv-ref"
+  (pass-if-not "assq-ref not" (assq-ref b "one"))
+  (pass-if "assv-ref"
 	   (let ((x (assv-ref a 'baz)))
 	     (and (list? x)
 		  (eq? (car x) 'quux))))
 
-  (pass-if-not "alist: assv-ref not" (assv-ref b "one"))
+  (pass-if-not "assv-ref not" (assv-ref b "one"))
 
-  (pass-if "alist: assoc-ref"
+  (pass-if "assoc-ref"
 	   (let ((x (assoc-ref b "one")))
 	     (and (list? x)
 		  (eq? (car x) 2)
 		  (eq? (cadr x) 3))))
 
 
-  (pass-if-not "alist: assoc-ref not" (assoc-ref a 'testing))
+  (pass-if-not "assoc-ref not" (assoc-ref a 'testing))
 
   (let* ((have-sloppy-assv-ref? (defined? 'sloppy-assv-ref))) 
 
-    (pass-if "alist: assv-ref deformed"
+    (pass-if "assv-ref deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -177,7 +177,7 @@
 	(lambda (key . args)
 	  #t)))
 
-    (pass-if "alist: assoc-ref deformed"
+    (pass-if "assoc-ref deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -186,7 +186,7 @@
 	(lambda (key . args)
 	  #t)))
 
-    (pass-if "alist: assq-ref deformed"
+    (pass-if "assq-ref deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -200,39 +200,39 @@
 (let ((a '((another . silly) (alist . test-case)))
       (b '(("this" "one" "has") ("strings" "!")))
       (deformed '(canada is a cold nation)))
-  (pass-if "alist: assq-set!"
+  (pass-if "assq-set!"
 	   (begin
 	     (set! a (assq-set! a 'another 'stupid))
 	     (let ((x (safe-assq-ref a 'another)))
 	       (and x
 		    (symbol? x) (eq? x 'stupid)))))
 
-  (pass-if "alist: assq-set! add"
+  (pass-if "assq-set! add"
 	   (begin
 	     (set! a (assq-set! a 'fickle 'pickle))
 	     (let ((x (safe-assq-ref a 'fickle)))
 	       (and x (symbol? x)
 		    (eq? x 'pickle)))))
 
-  (pass-if "alist: assv-set!"
+  (pass-if "assv-set!"
 	   (begin
 	     (set! a (assv-set! a 'another 'boring))
 	     (let ((x (safe-assv-ref a 'another)))
 		   (and x
 			(eq? x 'boring)))))
-  (pass-if "alist: assv-set! add"
+  (pass-if "assv-set! add"
 	   (begin
 	     (set! a (assv-set! a 'whistle '(while you work)))
 	     (let ((x (safe-assv-ref a 'whistle)))
 	       (and x (equal? x '(while you work))))))
 
-  (pass-if "alist: assoc-set!"
+  (pass-if "assoc-set!"
 	   (begin
 	     (set! b (assoc-set! b "this" "has"))
 	     (let ((x (safe-assoc-ref b "this")))
 	       (and x (string? x)
 		    (string=? x "has")))))
-  (pass-if "alist: assoc-set! add"
+  (pass-if "assoc-set! add"
 	   (begin
 	     (set! b (assoc-set! b "flugle" "horn"))
 	     (let ((x (safe-assoc-ref b "flugle")))
@@ -241,7 +241,7 @@
 
   (let* ((have-sloppy-assv-ref? (defined? 'sloppy-assv-ref))) 
 
-    (pass-if "alist: assq-set! deformed"
+    (pass-if "assq-set! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -250,7 +250,7 @@
 	(lambda (key . args)
 	  #t)))   
 
-    (pass-if "alist: assv-set! deformed"
+    (pass-if "assv-set! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -259,7 +259,7 @@
 	(lambda (key . args)
 	  #t)))
 
-    (pass-if "alist: assoc-set! deformed"
+    (pass-if "assoc-set! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assv-ref?) (throw 'unsupported))
@@ -273,22 +273,22 @@
 (let ((a '((a b) (c d) (e boring)))
       (b '(("what" .  "else") ("could" . "I") ("say" . "here")))
       (deformed 1))
-  (pass-if "alist: assq-remove!"
+  (pass-if "assq-remove!"
 	   (begin 
 	     (set! a (assq-remove! a 'a))
 	     (equal? a '((c d) (e boring)))))
-  (pass-if "alist: assv-remove!"
+  (pass-if "assv-remove!"
 	   (begin
 	     (set! a (assv-remove! a 'c))
 	     (equal? a '((e boring)))))
-  (pass-if "alist: assoc-remove!"
+  (pass-if "assoc-remove!"
 	   (begin
 	     (set! b (assoc-remove! b "what"))
 	     (equal? b '(("could" . "I") ("say" . "here")))))
 
   (let* ((have-sloppy-assq-remove? (defined? 'sloppy-assq-remove))) 
 
-    (pass-if "alist: assq-remove! deformed"
+    (pass-if "assq-remove! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assq-remove?) (throw 'unsupported))
@@ -297,7 +297,7 @@
 	(lambda (key . args)
 	  #t)))
 
-    (pass-if "alist: assv-remove! deformed"
+    (pass-if "assv-remove! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assq-remove?) (throw 'unsupported))
@@ -306,7 +306,7 @@
 	(lambda (key . args)
 	  #t)))
 
-    (pass-if "alist: assoc-remove! deformed"
+    (pass-if "assoc-remove! deformed"
       (catch 'wrong-type-arg
 	(lambda ()
 	  (if (not have-sloppy-assq-remove?) (throw 'unsupported))
